chat overflow bug-fix

--- a/templates-html/style.css
+++ b/templates-html/style.css
@@ -664,7 +664,12 @@ a{
 
 
 /*------------Messages----------*/
-
+#messagesList{
+	width: 100%;
+	height:100%;
+	margin-bottom:50px;
+	display:table;
+}
 .message{
 	font-size: 15px;
 	margin:2px;		
@@ -738,6 +743,7 @@ a{
 	left:300px;
 	box-sizing: border-box;
 	padding:20px;
+	background-color: #f0f0f0;
 }
 #sendMessage hr{
 	background-color:#8b8f97;
